build: Use Java 14 with preview features (records)