@@ -7,8 +7,8 @@ plugins {
 group 'uk.co.probablyfine'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 10
-targetCompatibility = 10
+sourceCompatibility = 14
+targetCompatibility = 14
 
 repositories {
     mavenCentral()
@@ -35,4 +35,14 @@ test {
     testLogging {
         showStandardStreams = true
     }
+    jvmArgs(['--enable-preview'])
+
+}
+
+compileTestJava {
+    options.compilerArgs += ["--enable-preview"]
+}
+
+compileJava {
+    options.compilerArgs += ["--enable-preview"]
 }
